import { Households } from "./households";

export class VulnerabilityCriteria {
    static __classname__ = 'VulnerabilityCriteria';

    /**
     * Vulnerability criteria' id
     * @type {number}
     */
    id: number;

    /**
     * Vulnerability Criteria' field_string
     * @type {string}
     */
    field_string: string = '';

    /**
    * Path to find png corresponding to this vulnerability
    * @type {string}
    */
    src?: string = '';

    constructor(instance?) {
        if (instance !== undefined) {
            this.id = instance.id;
            this.field_string = instance.field_string;
        }
    }

    public static formatArray(instance): VulnerabilityCriteria[] {
        let formatVulnerability: VulnerabilityCriteria[] = [];
        instance.forEach(element => {
            formatVulnerability.push(this.formatElement(element));
        });
        return formatVulnerability;
    }

    public static formatElement(element): VulnerabilityCriteria {
        let vulnerability = new VulnerabilityCriteria;
        vulnerability.id = element.id;
        vulnerability.field_string = element.field_string;
        vulnerability.src = Households.mapVulnerability(element.field_string);
        return vulnerability;
    }
}